# opentrader

./: .env.sample  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  PROJECT_STATE.md  README.md  compose.yml  ruff.toml
.github/DISCUSSION_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: data_providers.toml  init.sql  market_tones.json
mcp/eodhd-mcp/: Dockerfile  pyproject.toml  run_http.py  server.py
mcp/insights-mcp/: Dockerfile  pyproject.toml  run_http.py  server.py
mcp/massive-mcp/: server.py
mcp/tradingview-mcp/: Dockerfile
mcp/yahoo-finance-mcp/: Dockerfile.http  run_http.py  server.py
python/: Dockerfile.webui  requirements.txt  requirements.webui.txt
python/aggregator/: combiner.py  main.py
python/broker_gateway/: fill_sim.py  main.py  router.py
python/brokers/: base.py
python/chat_agent/: commands.py  discord_bot.py  formatter.py
python/llm/: connector.py
python/market_data/: cache.py  circuit_breaker.py  main.py  refresher.py  router.py
python/options_monitor/: main.py
python/orchestrator/: commander.py  email_monitor.py  main.py  watchdog.py
python/predictor/: factors.py  main.py  ml_predictor.py  personas.py  regime_cnn.py  rl_agent.py  scorer.py
python/review/: main.py
python/risk_clustering/: main.py
python/scheduler/: jobs.py  main.py
python/scraper/: main.py
python/scrapers/: base.py
python/shared/: assignments.py  base_agent.py  crypto.py  data_cache.py  data_client.py  db_retry.py  envelope.py  exclusions.py  fred_client.py  instrument_utils.py  (+7 more)
(+56 files in other folders)
