[project]
name = "insights-mcp"
version = "0.1.0"
description = "OpenTrader Code Insights MCP server — exposes agent telemetry and codebase to Claude Desktop"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
]

[tool.setuptools]
py-modules = ["server", "run_http"]
